# ChangeLog for games-arcade/funguloids
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> funguloids-1.06.ebuild:
  Updated src_compile for testing.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> ChangeLog:
  Fixed repoman reported errors.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> funguloids-1.06.ebuild:
  Fixed repoman reported errors.
