@@ -1,3 +1,3 @@
 DIST funguloids-linux-1.06.tar.bz2 14059909 RMD160 db98d75463e8d9f052ae5e4d4e4941594b21e8e9 SHA1 7245b9534c978bb61605431f01d5137474e47c8f SHA256 397bbf198c92f9c5cf8da01ebb5ebe9e2e9351b8c15a69de4cc6f160319f3b33
-EBUILD funguloids-1.06.ebuild 1546 RMD160 8e28d85dfcbef02f13a9b3cb74b21d2bf8e94997 SHA1 e3091471ad88491b1c46c41de787b9e1e305e62f SHA256 4c97dae571700276e91ceaa8b58fc7605a50121425a21d003949efcd13b867d6
-MISC ChangeLog 431 RMD160 5b0daddfd8ede92e277c18877245dbd4758ec6b2 SHA1 dbe7e9bfb3bbcb90b8134eda4cb6d19ac24888c7 SHA256 37965de5d26fac0413d9dfc5f3e332b4b69126852442b2a4e2ad5323c5687815
+EBUILD funguloids-1.06.ebuild 1674 RMD160 30285f88fcd5828f043739701681a8aaed79918e SHA1 501fca7fc2832442fc7981a312805c11e67ccc66 SHA256 2ca6a089da15f31266f68f557f36b40609c6c2ee02167bfacdc3c52f45a0925e
+MISC ChangeLog 619 RMD160 d0241a9f0dd54695896f9363f13d530900e2a5c7 SHA1 1f924122be078b131b4a88dcac0ee96eb0e77e10 SHA256 ddc938e4ec0bf6eb7d4594f57c6b4ee96d7db3d66b1423ab5e072a7a1add5da8
